add verifications pages

--- a/src/components/link/link.module.scss
+++ b/src/components/link/link.module.scss
@@ -5,6 +5,10 @@
         text-transform: uppercase;
     }
 
+    &.underline {
+        text-decoration: underline;
+    }
+
     &.pointer {    
         cursor: pointer;
         transition: var(--transition);
