update Seo for post and user

--- a/src/components/buttons/button.module.scss
+++ b/src/components/buttons/button.module.scss
@@ -2,6 +2,12 @@
 
 .global {
     color: var(--text-normal);
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 5px;
 
     &.uppercase {
         text-transform: uppercase;
