--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -2,19 +2,19 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
 .theme-dark-blue {
-  --bg-primary: #23232e;
+  --bg-primary: #1B263B;
   --bg-primary-opacity: #242433;
-  --bg-secondary: #141418;
-  --bg-third: #1E202C;
-  --text-normal: #dddddd;
-  --text-normal-hover: #a8a8a8;
-  --text-link: #00b0f4;
-  --text-muted: #a6a9ad;
+  --bg-secondary: #2C3E50;
+  --bg-third: #0A3D62;
+  --text-normal: #F0EFEF;
+  --text-normal-hover: #AEB6BF;
+  --text-link: #00B0F4;
+  --text-muted: #AEB6BF;
   --badge-color: #f04747;
-  --fa-primary: #ff7eee;
-  --fa-secondary: #df49a6;
-  --fa-third: #b33b85;
-  --warning-color: #ea4646;
+  --fa-primary: #F0EFEF;
+  --fa-secondary: #AEB6BF;
+  --fa-third: #9EA6AF;
+  --warning-color: #EC7063;
   --good-color: #43b581;
   --medium-color: #faa61a;
   --off-color: #6e7985;
