--- a/src/components/form/form.module.scss
+++ b/src/components/form/form.module.scss
@@ -17,7 +17,7 @@
         overflow: auto;
     }
 
-    &.form {
+    .form {
         border-radius: 15px;
         position: relative;
         z-index: 1;
@@ -27,6 +27,12 @@
         padding: 45px;
         overflow: auto;
         box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+        display: flex;
+        flex-direction: column;
+
+        .title {
+            font-size: 30px;
+        }
     
         @media screen and (max-width: 800px) {
           border-radius: 0px;
