--- a/src/components/link/link.module.scss
+++ b/src/components/link/link.module.scss
@@ -33,6 +33,7 @@
         border-radius: 20px;
         background-color: var(--bg-secondary);
         font-size: 16px;
+        margin: 5px;
 
         &:hover {
             transition: var(--transition);
