--- a/src/components/animations/Animations.module.scss
+++ b/src/components/animations/Animations.module.scss
@@ -1,168 +1,180 @@
 .second_box {
-	width: 100%;
-	text-align: left;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	
-	.box_icon {
-		cursor: pointer;
-		text-align: left;
-		display: flex;
-		flex-direction: row;
-		justify-content: center;
-		align-items: center;
-		padding: 0 40px;
-		box-sizing: border-box;
-		gap: 5px;
-		margin: 0;
-		min-width: 0;
-		width: 150px;
-		background-color: var(--bg-secondary);
-		opacity: 0.8;
-		border: solid 1px;
-		border-radius: 4px;
-		padding-top: 8px;
-		padding-bottom: 8px;
-		padding-left: 16px;
-		padding-right: 16px;
-		margin-right: 16px;
-		margin-bottom: 16px;
-	}
+  width: 100%;
+  text-align: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
+  .box_icon {
+    cursor: pointer;
+    text-align: left;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    padding: 0 40px;
+    box-sizing: border-box;
+    gap: 5px;
+    margin: 0;
+    min-width: 0;
+    width: 150px;
+    background-color: var(--presentation-bg);
+    opacity: 0.8;
+    border: solid 1px;
+    border-radius: 4px;
+    padding-top: 8px;
+    padding-bottom: 8px;
+    padding-left: 16px;
+    padding-right: 16px;
+    margin-right: 16px;
+    margin-bottom: 16px;
+  }
 }
 
 .box {
-    text-align: left;
-	display: flex;
-	width: 100%;
-	justify-content: center;
-	align-items: center;
-	flex-direction: column;
-	padding: 0 40px;
-	box-sizing: border-box;
-	height: 66vh;
+  text-align: left;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  padding: 0 40px;
+  box-sizing: border-box;
+  max-height: 66vh;
 
-	@media screen and (max-width: 800px) {
-		padding: 10px;
-		width: 100vw;
-		height: unset;
-	}
+  @media screen and (max-width: 800px) {
+    padding: unset;
+    width: 100vw;
+	max-height: unset;
+  }
 
-	.box_text {
+  .box_text {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
 
-		display: flex;
-		flex-direction: column;
-		align-items: center;
+    h2 {
+      font-size: 55px;
+      text-transform: none;
+      font-weight: 500;
+      line-height: 1.5em;
+      margin-top: 0;
+      padding-top: 0;
 
-		h2 {
-			font-size: 55px;
-			text-transform: none;
-			font-weight: 500;
-			line-height: 1.5em;
-			margin-top: 0;
-			padding-top: 0;
+      @media screen and (max-width: 800px) {
+        font-size: 30px;
+      }
+    }
 
-			@media screen and (max-width: 800px) {
-				font-size: 30px;
-			}
-		}
-
-		.button {
-			width: 33%;
-			transform: var(--transition);
-			cursor: pointer;
-			padding: 15px;
-			border-radius: 50px;
-			text-align: center;
-			min-width: 200px;
-			background-color: var(--bg-secondary);
-			
-			&:hover {
-			  transform: var(--transition);
-			  background-color: var(--bg-third);
-	
-			  a {  
-				color: var(--text-normal-hover);
-			  }
-			}
-		}
-	}
-
-    .box_image {
-		display: flex;
-		justify-content: center;
-		align-items: center;
-		max-width: 1440px;
+	h3 {
+		display: block;
+		font-size: 1.17em;
+		margin-block-start: 1em;
+		margin-block-end: 1em;
+		margin-inline-start: 0px;
+		margin-inline-end: 0px;
+		font-weight: bold;
 
 		@media screen and (max-width: 800px) {
-			padding: 10px;
-			max-width: 100vw;
-			width: 100vw;
-			flex-direction: column-reverse;
-		  }
-
-        &.reverse {
-            flex-direction: row-reverse;
-
-			@media screen and (max-width: 800px) {
-				flex-direction: column-reverse;
-			}
-        }
-    
-        .informations {
-			flex: 1;
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			align-items: flex-start;
-			padding-inline-end: 100px;
-
-			@media screen and (max-width: 800px) {	
-				padding-inline-end: 0px;
-			}
-    
-			h2 {
-				font-size: 26px;
-				text-transform: none;
-				font-weight: 500;
-				line-height: 1.5em;
-				margin-top: 0;
-				padding-top: 0;
-
-				@media screen and (max-width: 800px) {
-					font-size: 20px;
-				}
-			}
-			
-			p {
-				font-size: 19px;
-				color: var(--text-normal-hover);
-				line-height: 1.8em;
-				margin-top: 5px;
-
-				@media screen and (max-width: 800px) {
-					font-size: unset;
-				}
-			}
-        }
-
-        .image {
-			box-flex: 1;
-			flex: 1;
-			display: flex;
-			padding: 50px;
-			justify-content: center;
-			align-items: center;
-
-			@media screen and (max-width: 800px) {
-				padding: 0px;
-				padding-bottom: 5px;
-			}
-			
-			img {
-				width: 100%;
-				border-radius: 10px;
-			}
+			font-size: 16px;
+			margin-block-start: 1em;
+			margin-block-end: 1em;
 		}
+	}
+
+    .button {
+      width: 50%;
+      flex: 1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: row;
     }
+  }
+
+  .box_image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 1440px;
+
+    @media screen and (max-width: 800px) {
+      padding: 10px;
+      max-width: 100vw;
+      width: 100vw;
+      flex-direction: column-reverse;
+    }
+
+    &.reverse {
+      flex-direction: row-reverse;
+
+      @media screen and (max-width: 800px) {
+        flex-direction: column-reverse;
+      }
+    }
+
+    .informations {
+      flex: 1;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      align-items: flex-start;
+      padding-inline-end: 100px;
+
+      @media screen and (max-width: 800px) {
+        padding-inline-end: 0px;
+      }
+
+      h2 {
+        font-size: 26px;
+        text-transform: none;
+        font-weight: 500;
+        line-height: 1.5em;
+        margin-top: 0;
+        padding-top: 0;
+
+        @media screen and (max-width: 800px) {
+          font-size: 20px;
+        }
+      }
+
+      p {
+        font-size: 19px;
+        color: var(--text-normal-hover);
+        line-height: 1.8em;
+        margin-top: 5px;
+
+        @media screen and (max-width: 800px) {
+          font-size: unset;
+        }
+      }
+    }
+
+    .image {
+      flex: 1;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      padding: 50px;
+
+      @media screen and (max-width: 800px) {
+        padding: unset;
+      }
+
+      img {
+        margin-top: auto;
+        margin-bottom: auto;
+        max-width: 678px;
+        max-height: 678px;
+        width: auto;
+        object-fit: cover;
+		border-radius: 10px;
+
+		@media screen and (max-width: 800px) {
+			width: 66%;
+		}
+      }
+    }
+  }
 }
