--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,36 @@
 @charset "utf-8";
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,500;1,600;1,700;1,800&display=swap');
 
+.old-theme-dark-blue {
+  --bg-primary: #23232e;
+  --bg-primary-opacity: #242433;
+  --bg-secondary: #141418;
+  --bg-third: #1E202C;
+  --text-normal: #dddddd;
+  --text-normal-hover: #a8a8a8;
+  --text-link: #00b0f4;
+  --text-muted: #a6a9ad;
+  --badge-color: #f04747;
+  --fa-primary: #ff7eee;
+  --fa-secondary: #df49a6;
+  --fa-third: #b33b85;
+  --warning-color: #ea4646;
+  --good-color: #43b581;
+  --medium-color: #faa61a;
+  --off-color: #6e7985;
+  --color-blue: #1c9eff;
+  --color-blue-hover: #007ad6;
+  --color-red: #cc3300;
+  --color-green: #339900;
+  --color-yellow: #ffcc00;
+  --hover-overlay: rgba(255, 255, 255, 0.1);
+  
+  --presentation-bg: linear-gradient(180deg, rgba(12,13,17,1) 0%, rgba(15,16,21,1) 15%, rgba(19,22,29,1) 25%, rgba(30,32,44,1) 40%, rgba(36,39,54,1) 60%, rgba(49,52,71,1) 80%);
+
+  color: var(--text-normal);
+  background-color: var(--bg-primary);
+}
+
 .theme-dark-blue {
   --bg-primary: #1B263B;
   --bg-primary-opacity: #242433;
@@ -24,6 +54,8 @@
   --color-green: #339900;
   --color-yellow: #ffcc00;
   --hover-overlay: rgba(255, 255, 255, 0.1);
+
+  --presentation-bg: linear-gradient(180deg, rgba(12,13,17,1) 0%, rgba(15,16,21,1) 15%, rgba(19,22,29,1) 25%, rgba(30,32,44,1) 40%, rgba(36,39,54,1) 60%, rgba(49,52,71,1) 80%);
 
   color: var(--text-normal);
   background-color: var(--bg-primary);
@@ -53,6 +85,8 @@
   --color-yellow: #ffcc00;
   --hover-overlay: rgba(255, 255, 255, 0.1);
 
+  --presentation-bg: linear-gradient(180deg, rgba(12,13,17,1) 0%, rgba(15,16,21,1) 15%, rgba(19,22,29,1) 25%, rgba(30,32,44,1) 40%, rgba(36,39,54,1) 60%, rgba(49,52,71,1) 80%);
+
   color: var(--text-normal);
   background-color: var(--bg-primary);
 }
@@ -80,6 +114,8 @@
   --color-green: #339900;
   --color-yellow: #ffcc00;
   --hover-overlay: rgba(255, 255, 255, 0.1);
+
+  --presentation-bg: linear-gradient(180deg, rgba(12,13,17,1) 0%, rgba(15,16,21,1) 15%, rgba(19,22,29,1) 25%, rgba(30,32,44,1) 40%, rgba(36,39,54,1) 60%, rgba(49,52,71,1) 80%);
 
   color: var(--text-normal);
   background-color: var(--bg-primary);
